Uploaded videos to youtube and now displaying them on the view.

--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -1,20 +1,87 @@
 <h2 class="heading">VIDEOS</h2>
 
-<p>Below are the videos displaying Muro’s signature products in action. Click the images to view the videos. Be sure to visit our <strong><a href="http://www.youtube.com/">YouTube page</a></strong> and and <strong><a href="http://www.youtube.com/">subscribe</a></strong> to stay up to date with Muro product innovations.</p>
+<p>Below are the videos displaying Muro’s signature products in action. Click the images to view the videos. Be sure to visit our <strong><a href="https://www.youtube.com/channel/UCV9IO9TKgZY3aADGA3abS4Q/videos" target="_blank">YouTube page</a></strong>.
 
 <section id="videos">
   <div class="video">
 
     <iframe src="https://www.youtube.com/embed/QMI3z1PjxKA" frameborder="0" allowfullscreen></iframe>
-    <h4>What Trades Want - Muro Product Review</h4>
+    <h4><a href="https://youtu.be/QMI3z1PjxKA" target="_blank">What Trades Want - Muro Product Review</a></h4>
     <p>The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/1dYX4F3YTKE" frameborder="0" allowfullscreen></iframe>
-    <h4>Deck Builder - Muro Product Review</h4>
+    <h4><a href="https://youtu.be/1dYX4F3YTKE" target="_blank">Deck Builder - Muro Product Review</a></h4>
     <p>Andy Wormer with Professional Deck Builder magazine talks with us about Muro's auto feed screw driving system. Here we demonstrate the coil and strip feed systems that are designed for countless applications.</p>
   </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/WGZocGgz86A" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/WGZocGgz86A" target="_blank">Screwing Down Planks</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/pU--YN50RU8" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/pU--YN50RU8" target="_blank">CH7390 Deck Install</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/4R1EXEjS7Go" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/4R1EXEjS7Go" target="_blank">CH7390 STBRN</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/Lar9XAihGpA" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/Lar9XAihGpA" target="_blank">FD arena floor install</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/TAaRL0DgSsk" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/TAaRL0DgSsk" target="_blank">FD boardwalk install</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/3ei1GCa9_XM" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/3ei1GCa9_XM" target="_blank">FL bus floor install</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/CdcRx7NIxc0" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">FLVL41 trk flr</a></h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+  </div>
+
+
+
+
 </section>
 
 
