Edited video, uploaded to youtube, now pointing to video.

--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -79,6 +79,13 @@
     consequat.</p>
   </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/2jjjoVbJj8s" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">The EF Tool in Action</a></h4>
+    <p>Showing the EFVL62-17 tool with the RSM665BFL screws going into 2x6 PT lumber then going into 3'' square tubing.</p>
+  </div>
+
+
 
 
 
