--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -18,38 +18,26 @@
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/WGZocGgz86A" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/WGZocGgz86A" target="_blank">Screwing Down Planks</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/WGZocGgz86A" target="_blank">Speed Driver – Decking</a></h4>
+    <p>Who would have thought driving 3” screws into 2” X 6” PT lumber could be so easy? Muro Speed Driver (FDVL41) lets you leave every job early; you can relax knowing that you exceeded expectations!</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/pU--YN50RU8" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/pU--YN50RU8" target="_blank">CH7390 Deck Install</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/pU--YN50RU8" target="_blank">Ultra Driver – Decking</a></h4>
+    <p>Contractor or DIY’er, Muro turns everyone into a pro. Watch how easy deck building has become when you have the right tool – don’t be swayed by inferior brands. Choose Muro, the inventors of Auto Feed Technology!</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/4R1EXEjS7Go" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/4R1EXEjS7Go" target="_blank">CH7390 STBRN</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/4R1EXEjS7Go" target="_blank">Comp. Lumber Decks</a></h4>
+    <p>Save your back and knees by turning that two day job into a neat 4 hour project. Wouldn’t you like to be like Gary “I am going home”.</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/Lar9XAihGpA" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/Lar9XAihGpA" target="_blank">FD arena floor install</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/Lar9XAihGpA" target="_blank">Temporary Flooring</a></h4>
+    <p>Have you ever had one on those endless jobs that you keep thinking “there must be a better way”.  Well there is! Watch this crew install a temporary floor inside an arena. They love their Muro!</p>
   </div>
 
   <div class="video">
@@ -63,26 +51,22 @@
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/3ei1GCa9_XM" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/3ei1GCa9_XM" target="_blank">FL bus floor install</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/3ei1GCa9_XM" target="_blank">Bus Floor</a></h4>
+    <p>Shuttle Bus manufacturing simplified. Watch the Power Driver (FLVL41) in action, effortlessly driving screws through 5/8” plywood into a 16ga steel frame. Many bus manufacturers are now driving their business with Muro, shouldn’t you?
+</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/CdcRx7NIxc0" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">FLVL41 trk flr</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">Truck or Bus Floors</a></h4>
+    <p>See how Muro handles OSB sheets on metal frames. Whether a truck, trailer or bus floor, Muro provides a common denominator – easy!
+</p>
   </div>
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/2jjjoVbJj8s" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">The EF Tool in Action</a></h4>
-    <p>Showing the EFVL62-17 tool with the RSM665BFL screws going into 2x6 PT lumber then going into 3'' square tubing.</p>
+    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">Trailer Floors</a></h4>
+    <p>If you build trailers we can help. Watch how easily the EFVL62 tool drives screws through 2” X 6” PT boards and into 3” square tube. Isn’t it time for you to get the Muro advantage?</p>
   </div>
 
 
