Updated last product description.

--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -42,11 +42,8 @@
 
   <div class="video">
     <iframe src="https://www.youtube.com/embed/TAaRL0DgSsk" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/TAaRL0DgSsk" target="_blank">FD boardwalk install</a></h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.</p>
+    <h4><a href="https://youtu.be/TAaRL0DgSsk" target="_blank">Speed Driver - Decking 2</a></h4>
+    <p>No job too big or too small for the Muro Speed Driver (FDVL41). Become the envy of every jobsite!</p>
   </div>
 
   <div class="video">
