Brochures added and view completed.

--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -1,3 +1,8 @@
+//-------------------------
+// Videos
+//-------------------------
+
+
 .videos .block {
   width: 18.4%;
 
@@ -6,9 +11,6 @@
   }
 }
 
-//-------------------------
-// Videos
-//-------------------------
 
 .video {
   width: 47.5%;
@@ -31,3 +33,18 @@
     text-align: center;
   }
 }
+
+
+//-------------------------
+// Brochures
+//-------------------------
+
+.brochures {
+  margin-bottom: 50px;
+
+  h3 {
+    font-size: 1.3em;
+     margin: 50px 0 -25px;
+  }
+}
+
