--- a/app/views/downloads/brochures.html.erb
+++ b/app/views/downloads/brochures.html.erb
@@ -1,49 +1,93 @@
 <h2 class="heading">BROCHURES</h2>
   <p> Below are the product brochures for Muro North America's tools. Click to view each product manual in PDF format.</p>
 
+<section id="tool-brochures" class="group brochures">
+  <h3>Tool Brochures</h3>
+  <div class="selection tool" id="tool-brochures">
+    <a class="backdrop" href="/downloads/brochures/UltraDriver_Apr13.pdf" target="_blank"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"><img class="icon" src="/downloads/brochure-icon.png" alt="">
+    </a>
+    <%= link_to "CH7390 - Ultra Driver", "/downloads/brochures/UltraDriver_Apr13.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/EasyDriver_Apr13.pdf" target="_blank"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "CH7241 -  Easy Driver", "/downloads/brochures/EasyDriver_Apr13.pdf", :target=>"_blank" %>
+  </div>
 
-  <a class="backdrop" href="/downloads/brochures/UltraDriver_Apr13.pdf"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"><img class="icon" src="/downloads/brochure-icon.png" alt="">
-  </a>
-  <%= link_to "CH7390 - Ultra Driver", "/downloads/brochures/UltraDriver_Apr13.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/ch7260-cut-sheet.pdf" target="_blank"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "CH7260 - Metal Pro", "/downloads/brochures/ch7260-cut-sheet.pdf", :target=>"_blank" %>
+  </div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/PowerHeavyDuty_Apr13.pdf" target="_blank"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "FLVL41 - Power Driver", "/downloads/brochures/PowerHeavyDuty_Apr13.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/EasyDriver_Apr13.pdf"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "CH7241 -  Easy Driver", "/downloads/brochures/EasyDriver_Apr13.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/SpeedDriver_Apr13.pdf" target="_blank"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "FDVL41 - Speed Driver", "/downloads/brochures/SpeedDriver_Apr13.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/ch7260-cut-sheet.pdf"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "CH7260 - Metal Pro", "/downloads/brochures/ch7260-cut-sheet.pdf" %>
-</div>
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/PowerHeavyDuty_Apr13.pdf"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "FLVL41 - Power Driver", "/downloads/brochures/PowerHeavyDuty_Apr13.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/HDVL71-brochure.pdf" target="_blank"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "HDVL71 - Heavy Duty Driver",  "/downloads/brochures/HDVL71-brochure.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/FDVL41-brochure.pdf"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "FDVL41 - Speed Driver", "/downloads/brochures/FDVL41-brochure.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/LWVL32-brochure.pdf" target="_blank"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "LWVL32 - Coil Auto Feed System", "/downloads/brochures/LWVL32-brochure.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/HDVL71-brochure.pdf"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "HDVL71 - Heavy Duty Driver",  "/downloads/brochures/HDVL71-brochure.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/LHVL32-brochure.pdf" target="_blank"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "LHVL32 - Coil Hex Auto Feed System", "downloads/brochures/LHVL32-brochure.pdf", :target=>"_blank" %>
+  </div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/LWVL32-brochure.pdf"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "LWVL32 - Coil Auto Feed System", "/downloads/brochures/LWVL32-brochure.pdf" %>
-</div>
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/VL62-brochure.pdf" target="_blank"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "VL62 - Series of Tools", "/downloads/brochures/VL62-brochure.pdf", :target=>"_blank" %>
+  </div>
+</section>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/LHVL32-brochure.pdf"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "LHVL32 - Coil Hex Auto Feed System", "downloads/brochures/LHVL32-brochure.pdf" %>
-</div>
 
-<div class="selection tool">
-  <a class="backdrop" href="/downloads/brochures/VL62-brochure.pdf"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
-  <%= link_to "VL62 - Series of Tools", "/downloads/brochures/VL62-brochure.pdf" %>
-</div>
+<section id="screw-brochures" class="group brochures">
+
+  <h3>Screw Brochures</h3>
+
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/Shield-Guard-Deck-Screws.pdf" target="_blank"><img src="/downloads/brochures/shield_guard.png" alt="Shield Guard Screws"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "Shield Guard Deck Screws", "/downloads/brochures/Shield-Guard-Deck-Screws.pdf", :target=>"_blank" %>
+  </div>
+
+
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/headcote_collated.pdf" target="_blank"><img src="/downloads/brochures/headcote_collated.png" alt="HEADCOTE collated screws"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "HEADCOTE® Screws", "/downloads/brochures/headcote_collated.pdf", :target=>"_blank" %>
+  </div>
+
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/ejector_officecopy_higres.pdf" target="_blank"><img src="/downloads/brochures/ejector_brochure.png" alt="Ejector Screws"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "Ejector Screws", "/downloads/brochures/ejector_officecopy_higres.pdf", :target=>"_blank" %>
+  </div>
+
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/superwing_brochure_for_web.png" target="_blank"><img src="/downloads/brochures/superwing_brochure.png" alt="Superwing Screws"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "Superwing Screws Screws", "/downloads/brochures/superwing_brochure_for_web.png", :target=>"_blank" %>
+  </div>
+</section>
+
+
+<section id="screw-brochures" class="group brochures">
+
+  <h3>Application Brochures</h3>
+
+  <div class="selection tool">
+    <a class="backdrop" href="/downloads/brochures/decksanddocks.pdf" target="_blank"><img src="/downloads/brochures/decksanddocks_brochure.png" alt="Decks and Docks"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <%= link_to "Decks and Docks", "/downloads/brochures/decksanddocks.pdf", :target=>"_blank" %>
+  </div>
+</section>
+
+
+
+
+
