Fixed first round of revisions.

--- a/app/views/applications/commercial_roofing.html.erb
+++ b/app/views/applications/commercial_roofing.html.erb
@@ -28,7 +28,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
   <article>
     <a href=""><img src="/applications/roofing/commercial/ch7271wu.png" alt="CH7271WU Auto Feed Screw Driver "></a>
     <div>
-      <h4><a href="">CH7271WU</a></h4>
+      <h4><a href="">CH7241WU</a></h4>
       <p>
 Tool to drive pan head stitching screws - up to #10 diameter. Yes, even while standing up. <strong><a href="">Find out more.</a></strong></p>
     </div>
@@ -39,7 +39,7 @@ Tool to drive pan head stitching screws - up to #10 diameter. Yes, even while st
     <div>
       <h4><a href="">LHVL32</a></h4>
       <p>
-System to drive hex head screws with rubber washers. Perfect for metal clading. <strong><a href="">Find out more.</a></strong></p>
+System to drive hex head screws with rubber washers. Perfect for metal cladding. <strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 
