--- a/app/views/applications/flooring.html.erb
+++ b/app/views/applications/flooring.html.erb
@@ -33,7 +33,7 @@ and underlayment with ease.
 		<div>
 			<h4><a href="">CH7392SF - Ultra Driver
 </a></h4>
-			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash with a 4000 rpm motor.<br>x<strong><a href=""> Find out more.</a></strong></p>
+			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash with a 4000 rpm motor.<br><strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
 
