--- a/app/views/customer_service/testimonials.html.erb
+++ b/app/views/customer_service/testimonials.html.erb
@@ -22,7 +22,7 @@
     <h5>Goshen, Indiana</h5>
     <div class="hanging-quote group">
       <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
-      <p>Some decisions really are “no brainers.”  Switching to Muro’s stand-up screw gun was one of them.  Instead of kneeling on the floorboard and using elbow-grease every eight inches, the employees now stand upright and allow the weight of the screw-gun to do most of the labor.  This has resulted in increased throughput and a probable eduction in workmen comp claims - zero since we began using Muro 5 years ago.  Definitely worth testing.</p>
+      <p>Some decisions really are “no brainers.”  Switching to Muro’s stand-up screw gun was one of them.  Instead of kneeling on the floorboard and using elbow-grease every eight inches, the employees now stand upright and allow the weight of the screw-gun to do most of the labor.  This has resulted in increased throughput and a probable reduction in workmen comp claims - zero since we began using Muro 5 years ago.  Definitely worth testing.</p>
       <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
     </div>
   </div>
@@ -30,7 +30,7 @@
 
 <div class="testimonial">
   <div class="quote">
-    <h3>Dan Williams – Maintenance Supervisor,</h3>
+    <h3>Dan Williams – Maintenance Supervisor</h3>
     <h4>Federal Coach - Forest River Bus</h4>
     <h5>Goshen, Indiana</h5>
     <div class="hanging-quote group">
