--- a/app/views/products/accessories.html.erb
+++ b/app/views/products/accessories.html.erb
@@ -26,7 +26,7 @@ strips close at hand for quick loading.</p>
   <h3>Carry Bag</h3>
 
   <h4>Description</h4>
-  <p>Soft sided, zippered bag for convenient organization
+  <p>Soft sided, zippered bag for convenient organization and
 transportation. Bag is designed to accommodate
 tool &amp; handle assembly.</p>
   <div class="display group">
