--- a/app/views/products/tools/show.html.erb
+++ b/app/views/products/tools/show.html.erb
@@ -33,7 +33,11 @@
 
       <div class="applications group">
         <h3>APPLICATIONS</h3>
-        <p>Here are some of the <%= @tool.name %>'s recommended applications:</p>
+        <% if @tool.product_code == "VL62" %>
+          <p>Here are some of the recommended applications for the <%= @tool.product_code %>:</p>
+        <% else %>
+          <p>Here are some of the <%= @tool.name %>'s recommended applications:</p>
+        <% end %>
         <ul>
           <%= raw @tool.applications %>
         </ul>
@@ -41,7 +45,12 @@
 
       <div class="compatible_screws">
         <h3>SCREWS</h3>
-        <p><strong><%= link_to "View Screws", products_screw_path(@tool.id) %></strong> that are compatible with the <%= @tool.name %>.</p>
+        <p><strong><%= link_to "View Screws", products_screw_path(@tool.id) %></strong> that are compatible with the
+        <% if @tool.product_code == "VL62" %>
+          <%= @tool.product_code %>.
+        <% else %>
+          <%= @tool.name %>.</p>
+        <% end %>
       </div>
 
       <div class="detail-box" id="tabs">
