--- a/app/views/customer_service/index.html.erb
+++ b/app/views/customer_service/index.html.erb
@@ -13,8 +13,8 @@
   </div>
 
   <div class="block">
-    <h3><%= link_to "Parts List and Schematics", "http://www.vislider.com/library/mna/partslist/us-ca_partslist.html", :target=>"_blank" %></h3>
-    <a href="http://www.vislider.com/library/mna/partslist/us-ca_partslist.html"><img class="select" src="/customer_service/gears.png" target="_blank" alt="Parts List and Schematics"></a>
+    <h3><%= link_to "Parts List and Schematics", "#", :class=>"parts_and_schematics"%></h3>
+    <a href="#" class="parts_and_schematics"><img class="select" src="/customer_service/gears.png" target="_blank" alt="Parts List and Schematics"></a>
   </div>
 
   <div class="block">
