Centered products schematics box.

--- a/app/assets/stylesheets/popup.scss
+++ b/app/assets/stylesheets/popup.scss
@@ -55,7 +55,8 @@ div#popup_content {
 }
 
 #parts_and_schematics_popup {
-  width: 700px;
+  width: 55%;
+  left: 20%;
 
   h3.service_portal  {
     font-size: 1.3em !important;
